--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,10 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'pnpm'
 
-      - name: Enable corepack
-        run: corepack enable
-
-      - name: Use workspace packageManager version
-        run: corepack use
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.17.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
