--- a/package.json
+++ b/package.json
@@ -20,18 +20,24 @@
     "test:core:watch": "pnpm --filter @genshin-rotation-sim/sim-core test -- --watch",
     "lint": "pnpm --recursive lint",
     "lint:core": "pnpm --filter @genshin-rotation-sim/sim-core lint",
-    "lint:web": "pnpm --filter web lint"
+    "lint:web": "pnpm --filter web lint",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@eslint/js": "^9.39.1",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "husky": "^9.1.7",
     "globals": "^16.5.0",
-    "typescript-eslint": "^8.46.4"
+    "husky": "^9.1.7",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "typescript-eslint": "^8.49.0"
   },
   "pnpm": {
     "overrides": {
