--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
+    # すべてのPRでチェックを実行（ターゲットブランチを限定しない）
 
 jobs:
   build-test:
