--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/node
+
+# TODO.md
+packages/sim-core/src/combat/TODO.md
